+Rate Icon Added +Rate App +UserEmail fetched and added to Parse +Check Scores logic for no duplicacy

--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android" >
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/mISelectBackground"
+        android:id="@+id/mIRate"
         android:showAsAction="always"
+        android:title="Rate App"
+        android:icon="@mipmap/ic_rate">
+    </item>
+    <item
+        android:id="@+id/mISelectBackground"
         android:title="Unlock Backgrounds">
     </item>
     <item
